issue|#48|Se corrigió la visibilidad de la cantidad de productos, el precio, el total y mas en el tema modern modo oscuro

--- a/public/porto-light/css/custom.css
+++ b/public/porto-light/css/custom.css
@@ -415,9 +415,6 @@ html.fixed.sidebar-white:not(.dark) .sidebar-left .nano {
 html.dark ul.nav-main li.nav-expanded > a, html.dark ul.nav-main li.nav-parent > ul.nav-children {
   background-color: #161d31 !important;
 }
-html.fixed.sidebar-white .sidebar-left a{
-  color: #f5f5f5 !important;
-}
 html.dark .dropdown-menu-desktop{
   background-color: #283046;
   color: #f5f5f5;
@@ -438,9 +435,6 @@ html.dark .list-config {
   & li:hover{
     background-color: #333c55 !important;
   }
-}
-html.fixed.sidebar-white:not(.dark) .sidebar-left a{
-  color: #60769a !important;
 }
 /* Rediseño sidebar */
 ul.nav-main li .nav-children li.nav-active:not(.nav-parent) > a {
